# crtaf-py

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: run_tests.yaml
src/crtaf/: __init__.py  core_types.py  from_lightweaver.py  physics_utils.py  simplification_visitors.py  spec_version.py
src/crtaf/exts/: linear_core_exp_wings_grid.py  multi_wavelength_grid.py
tests/: test_bound_free.py  test_collisional_rates.py  test_element.py  test_exts.py  test_from_lightweaver.py  test_levels.py  test_model.py  test_physics.py  test_qty.py  test_to_lightweaver.py  test_yaml.py
