[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crtaf"
authors = [
    {name = "Chris Osborne", email = "software@contextuallight.com"},
]
description = "Common Radiative Transfer Atomic Format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "ruamel.yaml",
    "pydantic",
    "pydantic_numpy",
    "lightweaver",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
]

[tool.setuptools_scm]
version_file = "src/crtaf/version.py"
